# mistral-pdf2md

./: .gitignore  .mcp.json  README.md  SESSIONS.md  SPEC.md  convert_pdf_to_markdown.py  main.py  mcp_server.py  pyproject.toml
.archived/: README.md
.archived/ocr_cleanup-gemini/: SPEC.md  process_markdown.py  prompt_pass1.md  prompt_pass2.md
.claude/: settings.json
.claude/hooks/: ruff_format.py
.omc/state/: hud-state.json  hud-stdin-cache.json
5e/722667035f/: metadata.json
74/c3ae311f56/: metadata.json
Ch3-Real_Analysis_Folland/: main.md
Part III/: Part III.md
apps/: convert_pdf_to_markdown.py  mcp_server.py
apps/mistral-ocr-process/: README.ja.md  README.md  cleanup_ocr.py  convert_pdf_to_markdown.py  fix_ocr_math_md.py  pipeline.py  pyproject.toml
apps/mistral-ocr-process/proofread-ocr/: CLAUDE.md  README.ja.md  README.md  SESSION.md  SPEC.md  pyproject.toml
apps/mistral-ocr-process/proofread-ocr/evals/: evals.json
apps/mistral-ocr-process/proofread-ocr/prompts/: extract_context.md  proofread.md
apps/mistral-ocr-process/proofread-ocr/prompts/corrected-by-gemini/: extract_context-gemini.md  proofread-gemini.md
apps/mistral-ocr-process/proofread-ocr/src/proofread_ocr/: __init__.py  chunker.py  cli.py  context.py  gemini.py  merger.py  models.py  proofreader.py
apps/mistral-ocr-process/proofread-ocr/tests/: test_chunker.py  test_merger.py
apps/mistral-ocr-process/proofread-ocr/tests/fixtures/: sample_context.md  sample_input.md
apps/ocr_cleanup-two_pass/: process_markdown.py  (+1 more)
ocr_cleanup/: SPEC.md  process_markdown.py  prompt_pass2.md
(+53 files in other folders)
